content/terraform-enterprise/2.0.x/docs/enterprise/deploy/reference/startup-checks.mdx
---
page_title: Startup checks reference
description: >-
  Terraform Enterprise startup checks validate the Terraform Enterprise
  configuration. Learn about the checks that run when you start Terraform Enterprise.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-02-02T17:54:50Z
last_modified: 2026-02-02T17:54:50Z
# END AUTO GENERATED METADATA
---

# Startup checks reference

This topic contains reference information about Terraform Enterprise startup checks. The startup checks validate the configuration in order to prevent operators from starting Terraform Enterprise with invalid certificates and other issues that could prevent the application from running successfully or safely.

Startup checks:

- Run concurrently at startup
- Cannot be skipped
- Have a 1 minute timeout

The results of the startup checks are logged alongside application logs. When
all of the startup checks pass, the application will continue to start up.

```
2023-06-30T17:54:58.628Z [INFO]  terraform-enterprise: check passed: name=configuration duration="29.741µs"
2023-06-30T17:54:58.628Z [INFO]  terraform-enterprise: check passed: name=database duration=10.053393ms
2023-06-30T17:54:58.628Z [INFO]  terraform-enterprise: check passed: name=disk duration="169.438µs"
2023-06-30T17:54:58.628Z [INFO]  terraform-enterprise: check passed: name=license duration=7.896534ms
2023-06-30T17:54:58.628Z [INFO]  terraform-enterprise: check passed: name=redis duration="632.735µs"
2023-06-30T17:54:58.628Z [INFO]  terraform-enterprise: check passed: name=tls duration="241.12µs"
2023-06-30T17:54:58.628Z [INFO]  terraform-enterprise: check passed: name=upgrade duration=29.954ms"
```

If any of the startup checks fail, the application will log the checks that
failed and exit. Operators can check the logs for information on how they can
resolve the failing checks.

You can configure Terraform Enterprise to tolerate failures from specific
check groups by setting [`TFE_STARTUP_CHECKS_IGNORE_FAILURES`](/terraform/enterprise/deploy/reference/configuration#tfe_startup_checks_ignore_failures).
When a group is listed there, its failures are logged at `WARN` (as `failed but ignored`)
and Terraform Enterprise continues startup. See [Tolerating startup check failures](#tolerating-startup-check-failures)
below for the recognized group names and operational guidance.

```
2023-06-30T18:14:45.792Z [INFO]  terraform-enterprise: check passed: name=configuration duration="102.266µs"
2023-06-30T18:14:45.792Z [INFO]  terraform-enterprise: check passed: name=database duration=11.925026ms
2023-06-30T18:14:45.792Z [INFO]  terraform-enterprise: check passed: name=disk duration="360.432µs"
2023-06-30T18:14:45.792Z [ERROR] terraform-enterprise: check failed: name=license duration="423.448µs" err="failed parsing license: incorrectly formatted license"
2023-06-30T18:14:45.792Z [INFO]  terraform-enterprise: check passed: name=redis duration="945.784µs"
2023-06-30T18:14:45.792Z [INFO]  terraform-enterprise: check passed: name=tls duration="795.072µs"
2023-06-30T18:14:45.792Z [INFO]  terraform-enterprise: check passed: name=upgrade duration=29.954ms"
2023-06-30T18:14:45.792Z [ERROR] terraform-enterprise: the following startup checks failed: checks=["license"]
2023-06-30T18:14:45.792Z [ERROR] terraform-enterprise: startup: error="startup checks failed"
```

## Types of checks

Startup checks run the following validations to detect misses and gaps during the setup
of the installation.  

### Configuration Variables

This check validates required configuration and acceptable values listed in the
[installation configuration reference](/terraform/enterprise/deploy/reference/configuration).  

### Database

This check validates database access by querying for the supported version. When the database connection fails, it will retry using a linear backoff strategy. For external database configuration, the following must be set and are used for validation.
* `TFE_DATABASE_HOST`
* `TFE_DATABASE_NAME`
* `TFE_DATABASE_USER`
* `TFE_DATABASE_PASSWORD`

The database validation can fail for the following reasons:

* The database user set via `TFE_DATABASE_USER` has insufficient permissions to execute the query: `SHOW server_version;`
* The Postgres database version is a value other than `13`, `14`, `15`, `16`, or `17`.

### Filesystem access

This validation only applies to application running `TFE_OPERATIONAL_MODE: disk` on Docker runtime.  

Validates the application has read / write privileges in the directory configured in `TFE_DISK_PATH`.  This filesystem access validation can fail for the following reasons:

* The application has no privilege to read / write files to the directory and its subdirectories configured in `TFE_DISK_PATH`.

### License

This check validates that the application has read privilege to the license and that it is a valid HashiCorp-provided license. License validation does not fail if the license is expired, but it can fail for the following reasons:

- The license value was not provided via `TFE_LICENSE` or `TFE_LICENSE_PATH` is empty.

### Redis

This check validates the application's connectivity to Redis. When the connection fails, the check retries using a linear backoff strategy. For external Redis configurations, you must set the following variables:
* `TFE_REDIS_HOST`
* If `TFE_REDIS_USE_TLS` is set to `true` the application will use `rediss` instead of `redis` as the scheme.
* If `TFE_REDIS_USE_AUTH` is set to `true` the application will use the credentials provided by `TFE_REDIS_PASSWORD` and `TFE_REDIS_USER` (optional) for authentication.
* IF `TFE_REDIS_USE_MTLS` or `TFE_REDIS_SIDEKIQ_USE_MTLS` is set to `true` the application will present a valid certificate to the Redis server.

### TLS certificates

This check validates that the `TFE_TLS_CA_BUNDLE_FILE` variable has been set and that it points to a valid PEM-encoded file.

### Upgrade

This check ensures that upgrades to Terraform Enterprise occur in a sequential manner and do not forego
[required Terraform Enterprise releases](/terraform/enterprise/releases).
The upgrade check fails and logs error messages if the following conditions apply:

* A Terraform Enterprise instance is trying to upgrade to a version of the application that is not newer than the current version:
`"failed validating TFE version: vYYYYMM-P is not newer than existing version vYYYYMM-P"`

* A Terraform Enterprise instance has skipped over required releases:
`"failed to meet upgrade requirements: missing required releases: vYYYYMM-P, vYYYYMM-P"`

### Kubernetes

This validation applies to `TFE_RUN_PIPELINE_KUBERNETES_POD_TEMPLATE`, if provided. It ensures that the template is a valid `corev1.PodTemplateSpec` and contains no more than one `corev1.Container`.

## Tolerating startup check failures

By default, Terraform Enterprise aborts startup if any startup check fails. You can opt in to tolerating
failures from specific check groups by setting
[`TFE_STARTUP_CHECKS_IGNORE_FAILURES`](/terraform/enterprise/deploy/reference/configuration#tfe_startup_checks_ignore_failures)
to a comma-separated list of group names. When a check in a listed group fails, Terraform Enterprise:

- Still runs the check.
- Logs the failure at `WARN` with a `failed but ignored` message instead of aborting.
- Continues with the remaining startup sequence.

```
2023-06-30T18:14:45.792Z [WARN]  terraform-enterprise: check failed but ignored: name=tls duration="795.072µs" err="..."
```

The setting accepts the following group names (matched case-insensitively, surrounding whitespace ignored):

- `license`
- `tls`
- `disk`
- `database`
- `redis`
- `cloud`
- `archivist` (only relevant when `TFE_OBJECT_STORAGE_TYPE=s3`)
- `explorer_database` (only relevant when an explorer database is configured)

The following groups always hard-fail and cannot be ignored:

- `config`
- `upgrade`

Unknown values in the list are silently ignored. Diagnostic-only checks (`atlas`, `vault`, `task-worker`,
`fluent-bit`) do not gate startup, so listing them has no effect. The `preupgrade-check` tool and runtime
diagnostics are not affected by this setting; they continue to report failures normally.

This setting is intended for narrow operational scenarios, such as rotating an expired CA certificate
in a shared CA bundle without taking the application offline. Tolerating other failures, such as
`license`, `database`, or `redis`, typically defers errors to runtime rather than resolving them, and
is not recommended for general use.
